--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
 		"build": "node scripts/build.js",
 		"test": "node scripts/test.js",
 		"predeploy": "npm run build",
-		"deploy": "gh-pages -d deploy"
+		"deploy": "gh-pages -d build"
 	},
 	"eslintConfig": {
 		"extends": [
